--- a/Client/src/app/app.component.html
+++ b/Client/src/app/app.component.html
@@ -1,7 +1,5 @@
-<ul>
-
-   <li *ngFor="let user of users">
-    {{user.userName}}
-   </li> 
-</ul>
 <app-nav-bar></app-nav-bar>
+
+<div class="container mt-5 pt-5">
+  <router-outlet></router-outlet>
+</div>
