--- a/Client/src/app/nav-bar/nav-bar.component.html
+++ b/Client/src/app/nav-bar/nav-bar.component.html
@@ -1,24 +1,21 @@
 <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
   <div class="container">
-    <a class="navbar-brand" href="#">Dating App</a>
-    @if(loggedIn)
+    <a class="navbar-brand" routerLink="/" routerLinkActive="active">Dating App</a>
+    @if(true)
     {
       <ul class="navbar-nav me-auto mb-2 mb-md-0">
       <li class="nav-item">
-        <a class="nav-link">Matches</a>
+        <a class="nav-link" routerLink="/members" routerLinkActive="active">Matches</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link">Lists</a>
+        <a class="nav-link" routerLink="/lists" routerLinkActive="active">Lists</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link">Messages</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link"(click)="logout()">Log out</a>
+        <a routerLink="/messages" class="nav-link" routerLinkActive="active">Messages</a>
       </li>
     </ul>
     }
-    @if(loggedIn)
+    @if(accountService.CurrentUser())
     {
       <div dropdown class="dropdown">
         <a dropdownToggle class="dropdown-toggle text-light text-decoration-none">Welcome User</a>
@@ -28,7 +25,7 @@
         </div>
       </div>
     }
-    @if(!loggedIn)
+    @if(!accountService.CurrentUser())
     {
       <form class="d-flex" #LoginForm="ngForm" (ngSubmit)="login()">
       <input
